--- a/templates/cloud/extra-pages/sign-in.html
+++ b/templates/cloud/extra-pages/sign-in.html
@@ -3,8 +3,8 @@
 <html lang="en">
 
     <head>
-        
-        
+
+
         <meta charset="utf-8" />
         <title>Sign In | Jobcy - Job Listing Template | Themesdesign</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,7 +44,7 @@
         <!-- Begin page -->
         <div>
 
-            
+
             <div class="main-content">
 
                 <div class="page-content">
@@ -74,7 +74,7 @@
                                                             <h5>Welcome Back !</h5>
                                                             <p class="text-white-70">Sign in to continue to Jobcy.</p>
                                                         </div>
-                                                        <form action="{% url 'index'%}" class="auth-form">
+                                                        <form action="{% url 'rnd:index'%}" class="auth-form">
                                                             <div class="mb-3">
                                                                 <label for="usernameInput" class="form-label">Username</label>
                                                                 <input type="text" class="form-control" id="usernameInput" placeholder="Enter your username" required>
@@ -106,7 +106,7 @@
                         </div><!--end container-->
                     </section>
                     <!-- END SIGN-IN -->
-                    
+
                 </div>
                 <!-- End Page-content -->
 
