--- a/templates/cloud/extra-pages/sign-up.html
+++ b/templates/cloud/extra-pages/sign-up.html
@@ -3,8 +3,8 @@
 <html lang="en">
 
     <head>
-        
-        
+
+
         <meta charset="utf-8" />
         <title>Sign Up | Jobcy - Job Listing Template | Themesdesign</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -44,7 +44,7 @@
         <!-- Begin page -->
         <div>
 
-            
+
             <div class="main-content">
 
                 <div class="page-content">
@@ -71,20 +71,20 @@
                                                 <div class="auth-content card-body p-5 text-white">
                                                     <div class="w-100">
                                                         <div class="text-center">
-                                                            <h5>Let's Get Started</h5>
-                                                            <p class="text-white-70">Sign Up and get access to all the features of Jobcy</p>
+                                                            <h5>회원가입</h5>
+                                                            <p class="text-white-70">기관 등록 신청을 통해 서비스를 사용해 보세요</p>
                                                         </div>
-                                                        <form action="{% url 'index'%}" class="auth-form">
+                                                        <form action="{% url 'sign-in'%}" class="auth-form">
                                                             <div class="mb-3">
-                                                                <label for="usernameInput" class="form-label">Username</label>
+                                                                <label for="usernameInput" class="form-label">기관명</label>
                                                                 <input type="text" class="form-control" required id="usernameInput" placeholder="Enter your username">
                                                             </div>
                                                             <div class="mb-3">
-                                                                <label for="passwordInput" class="form-label">Email</label>
+                                                                <label for="passwordInput" class="form-label">이메일</label>
                                                                 <input type="email" class="form-control" required id="emailInput" placeholder="Enter your email">
                                                             </div>
                                                             <div class="mb-3">
-                                                                <label for="emailInput" class="form-label">Password</label>
+                                                                <label for="emailInput" class="form-label">암호</label>
                                                                 <input type="password" class="form-control" id="passwordInput" placeholder="Enter your password">
                                                             </div>
                                                             <div class="mb-4">
@@ -109,7 +109,7 @@
                         </div><!--end container-->
                     </section>
                     <!-- END SIGN-UP -->
-                    
+
                 </div>
                 <!-- End Page-content -->
 
