--- a/templates/kinsdb/database-index.html
+++ b/templates/kinsdb/database-index.html
@@ -1,4 +1,4 @@
-{% extends 'partials/base.html' %}
+{% extends 'partials/rnd_base.html' %}
 {% load static %}
 {% block title %}Database{% endblock title %}
 {% block extra_css %}
