--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -16,7 +16,7 @@
                                 <div class="footer-item mt-4 mt-lg-0">
                                     <p class="fs-16 text-white mb-4">HOME</p>
                                     <ul class="list-unstyled footer-list mb-0">
-                                        <li><a href="{% url 'about' %}"><i class="mdi mdi-chevron-right"></i> About Us</a></li>
+                                        <li><a href="{% url 'rnd:about' %}"><i class="mdi mdi-chevron-right"></i> About Us</a></li>
                                         <li><a href="{% url 'contact' %}"><i class="mdi mdi-chevron-right"></i> Contact Us</a></li>
                                         <li><a href="{% url 'services' %}"><i class="mdi mdi-chevron-right"></i> Services</a></li>
                                         <li><a href="{% url 'blog' %}"><i class="mdi mdi-chevron-right"></i> Blog</a></li>
