--- a/templates/rnd/about.html
+++ b/templates/rnd/about.html
@@ -1,1 +1,130 @@
-기관 안내 
+{% extends 'partials/rnd_base.html' %}
+{% load static %}
+{% block title %}R&D 지원제도 안내{% endblock title %}
+{% block extra_css %}
+<!-- Choise Css -->
+<link rel="stylesheet" href="{% static 'libs/choices.js/public/assets/styles/choices.min.css' %}">
+<style>
+  .img-fluid {
+    object-fit: scale-down;
+    height: 100px !important;
+    max-width: 80% !important;
+  }
+</style>
+{% endblock extra_css %}
+{% block content %}
+<!-- Start home -->
+<section class="page-title-box">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="text-center text-white">
+          <h3 class="mb-4">R&D 지원제도 안내 </h3>
+
+        </div>
+      </div>
+      <!--end col-->
+    </div>
+    <!--end row-->
+  </div>
+  <!--end container-->
+</section>
+<!-- end home -->
+
+<!-- START SHAPE -->
+<div class="position-relative" style="z-index: 1">
+  <div class="shape">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 250">
+      <path fill="#FFFFFF" fill-opacity="1" d="M0,192L120,202.7C240,213,480,235,720,234.7C960,235,1200,213,1320,202.7L1440,192L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path>
+    </svg>
+  </div>
+</div>
+<!-- END SHAPE -->
+<section class="section">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-6">
+                <div class="section-title text-center">
+                    <h3 class="title">개요</h3>
+                    <p class="text-muted">Post a job to tell us about your project. We'll quickly match you with the
+                        right freelancers.</p>
+                </div>
+            </div>
+            <!--end col-->
+        </div>
+        <div class="row">
+          <div style="height:400px; border: 1px solid black;"></div>
+        </div>
+        <!--end row-->
+        <div class="row">
+
+        </div><!--end row-->
+    </div>
+    <!--end container-->
+</section>
+<section class="section bg-light">
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-lg-6">
+                <div class="section-title text-center mb-4 pb-2">
+                    <h4 class="title">제도 안내</h4>
+                    <p class="text-muted mb-1">Post a job to tell us about your project. We'll quickly match you
+                        with the right freelancers.</p>
+                </div>
+            </div><!--end col-->
+        </div><!--end row-->
+        <div class="row justify-content-center">
+            <div class="col-lg-8">
+                <ul class="job-list-menu nav nav-pills nav-justified flex-column flex-sm-row mb-4" id="pills-tab"
+                    role="tablist">
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link active" id="recent-jobs-tab" data-bs-toggle="pill"
+                            data-bs-target="#recent-jobs" type="button" role="tab" aria-controls="recent-jobs"
+                            aria-selected="true">검토범위</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="featured-jobs-tab" data-bs-toggle="pill"
+                            data-bs-target="#featured-jobs" type="button" role="tab" aria-controls="featured-jobs"
+                            aria-selected="false">검토절차</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="freelancer-tab" data-bs-toggle="pill"
+                            data-bs-target="#freelancer" type="button" role="tab" aria-controls="freelancer"
+                            aria-selected="false">관련법규</button>
+                    </li>
+                    <li class="nav-item" role="presentation">
+                        <button class="nav-link" id="part-time-tab" data-bs-toggle="pill"
+                            data-bs-target="#part-time" type="button" role="tab" aria-controls="part-time"
+                            aria-selected="false">필요서류</button>
+                    </li>
+
+                </ul>
+            </div>
+            <!--end col-->
+        </div>
+        <!--end row-->
+        <div class="row">
+          <div style="height:500px; border: 1px solid black;"></div>
+        </div>
+        <!--end row-->
+    </div>
+    <!--end container-->
+</section>
+{% endblock content %}
+{% block javascript %}
+<!-- JAVASCRIPT -->
+<script src="{% static 'libs/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
+<script src="https://unicons.iconscout.com/release/v4.0.0/script/monochrome/bundle.js"></script>
+
+
+<!-- Choice Js -->
+<script src="{% static 'libs/choices.js/public/assets/scripts/choices.min.js' %}"></script>
+
+<!-- Candidate Js -->
+<script src="{% static 'js/pages/candidate.init.js' %}"></script>
+
+<!-- Switcher Js -->
+<script src="{% static 'js/pages/switcher.init.js' %}"></script>
+
+<script src="{% static 'js/app.js' %}"></script>
+{% endblock javascript %}
