--- a/templates/rnd/case.html
+++ b/templates/rnd/case.html
@@ -1,1 +1,165 @@
-지원 검토 사례
+{% extends 'partials/rnd_base.html' %}
+{% load static %}
+{% block title %}R&D 지원 검토 사례{% endblock title %}
+{% block extra_css %}
+<!-- Choise Css -->
+<link rel="stylesheet" href="{% static 'libs/choices.js/public/assets/styles/choices.min.css' %}">
+<style>
+  .img-fluid {
+    object-fit: scale-down;
+    height: 100px !important;
+    max-width: 80% !important;
+  }
+</style>
+{% endblock extra_css %}
+{% block content %}
+<!-- Start home -->
+<section class="page-title-box">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <div class="text-center text-white">
+          <h3 class="mb-4">R&D 지원 검토 사례</h3>
+
+        </div>
+      </div>
+      <!--end col-->
+    </div>
+    <!--end row-->
+  </div>
+  <!--end container-->
+</section>
+<!-- end home -->
+
+<!-- START SHAPE -->
+<div class="position-relative" style="z-index: 1">
+  <div class="shape">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 250">
+      <path fill="#FFFFFF" fill-opacity="1" d="M0,192L120,202.7C240,213,480,235,720,234.7C960,235,1200,213,1320,202.7L1440,192L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path>
+    </svg>
+  </div>
+</div>
+<!-- END SHAPE -->
+
+<section>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-10">
+        <div id="tabs">
+          <div class="card-body p-4">
+            <div>
+              <h6 class="card-title">검토 진행 사항</h6>
+              <p class="text-muted">검토 진행 사항에 관한 내용 또는 페이지 </p>
+              <ul class="nav nav-tabs" role="tablist">
+                <li class="nav-item">
+                  <a class="nav-link active" data-bs-toggle="tab" href="#hometab" role="tab">
+                    <span>KAERI</span>
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" data-bs-toggle="tab" href="#profile" role="tab">
+                    <span>KORAD</span>
+                  </a>
+                </li>
+              </ul>
+              <div class="tab-content p-3 border border-top-0 rounded-bottom text-muted">
+                <div class="tab-pane active" id="hometab" role="tabpanel">
+                  <p class="mb-0">
+                    KAERI 내용
+                  </p>
+                  <div style="height:600px; border: 1px solid black;"></div>
+
+                </div>
+                <div class="tab-pane" id="profile" role="tabpanel">
+                  <p class="mb-0">
+                    KOLAD 내용
+                  </p>
+                  <div style="height:600px; border: 1px solid black;"></div>
+
+                </div>
+              </div>
+            </div>
+            <!--end basic-tabs-->
+
+              <div class="p-4 border-bottom">
+              </div>
+            <div class="mt-5">
+              <h6 class="card-title">Basic Nav Pills</h6>
+              <ul class="nav nav-pills custom" role="tablist">
+                <li class="nav-item waves-effect waves-light">
+                  <a class="nav-link active" data-bs-toggle="tab" href="#home-1" role="tab">
+                    <span>Home</span>
+                  </a>
+                </li>
+                <li class="nav-item waves-effect waves-light">
+                  <a class="nav-link" data-bs-toggle="tab" href="#profile-1" role="tab">
+                    <span>Profile</span>
+                  </a>
+                </li>
+                <li class="nav-item waves-effect waves-light">
+                  <a class="nav-link" data-bs-toggle="tab" href="#messages-1" role="tab">
+                    <span>Messages</span>
+                  </a>
+                </li>
+                <li class="nav-item waves-effect waves-light">
+                  <a class="nav-link" data-bs-toggle="tab" href="#settings-1" role="tab">
+                    <span>Settings</span>
+                  </a>
+                </li>
+              </ul>
+              <div class="tab-content p-3 text-muted">
+                <div class="tab-pane active" id="home-1" role="tabpanel">
+                  <p class="mb-0">
+                    내용 1
+                  </p>
+                  <div style="height:200px; border: 1px solid black;"></div>
+                </div>
+                <div class="tab-pane" id="profile-1" role="tabpanel">
+                  <p class="mb-0">
+                    내용 2
+                  </p>
+                  <div style="height:200px; border: 1px solid black;"></div>
+                </div>
+                <div class="tab-pane" id="messages-1" role="tabpanel">
+                  <p class="mb-0">
+                    내용 3
+                  </p>
+                  <div style="height:200px; border: 1px solid black;"></div>
+                </div>
+                <div class="tab-pane" id="settings-1" role="tabpanel">
+                  <p class="mb-0">
+                    내용 4
+                  </p>
+                  <div style="height:200px; border: 1px solid black;"></div>
+                </div>
+              </div>
+            </div>
+            <!--end nav-pills-->
+          </div>
+          <!--end card-body-->
+        </div>
+        <!--end tabs-->
+      </div>
+    </div>
+  </div>
+</section>
+
+
+{% endblock content %}
+{% block javascript %}
+<!-- JAVASCRIPT -->
+<script src="{% static 'libs/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
+<script src="https://unicons.iconscout.com/release/v4.0.0/script/monochrome/bundle.js"></script>
+
+
+<!-- Choice Js -->
+<script src="{% static 'libs/choices.js/public/assets/scripts/choices.min.js' %}"></script>
+
+<!-- Candidate Js -->
+<script src="{% static 'js/cloud/candidate.init.js' %}"></script>
+
+<!-- Switcher Js -->
+<script src="{% static 'js/cloud/switcher.init.js' %}"></script>
+
+<script src="{% static 'js/app.js' %}"></script>
+{% endblock javascript %}
