--- a/templates/company/faqs.html
+++ b/templates/company/faqs.html
@@ -144,7 +144,7 @@
                                                                 </div>
                                                             </div>
                                                         </div><!--end accordion-item-->
-                                                        
+
                                                         <div class="accordion-item mt-4 border-0">
                                                             <h2 class="accordion-header" id="generalfive">
                                                                 <button class="accordion-button collapsed" type="button"
@@ -356,7 +356,7 @@
                                                                 </div>
                                                             </div>
                                                         </div><!--end accordion-item-->
-                                                        
+
                                                         <div class="accordion-item mt-4 border-0">
                                                             <h2 class="accordion-header" id="paymentfive">
                                                                 <button class="accordion-button collapsed" type="button"
@@ -501,7 +501,6 @@
                                 </div><!--end col-->
                                 <div class="col-lg-12">
                                     <div class="text-center mt-5">
-                                        <a href="{% url 'contact' %}" class="btn btn-primary btn-hover mt-2"><i class="uil uil-phone"></i> Contact Us</a>
                                         <a href="javascript:void(0)" class="btn btn-warning btn-hover mt-2 ms-md-2"><i class="uil uil-envelope"></i> Email Now</a>
                                     </div>
                                 </div>
@@ -511,13 +510,13 @@
                     <!-- END FAQ-PAGE -->
 {% endblock content %}
 {% block javascript %}
-        
+
         <!-- JAVASCRIPT -->
         <script src="{% static 'libs/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
         <script src="https://unicons.iconscout.com/release/v4.0.0/script/monochrome/bundle.js"></script>
-        
+
         <!-- Switcher Js -->
-        <script src="{% static 'js/pages/switcher.init.js' %}"></script>
+        <script src="{% static 'js/cloud/switcher.init.js' %}"></script>
 
         <script src="{% static 'js/app.js' %}"></script>
 {% endblock javascript %}
