--- a/templates/company/pricing.html
+++ b/templates/company/pricing.html
@@ -198,16 +198,16 @@
                     <!-- END CTA -->
 {% endblock content %}
 {% block javascript %}
-        
+
         <!-- JAVASCRIPT -->
         <script src="{% static 'libs/bootstrap/dist/js/bootstrap.bundle.min.js' %}"></script>
         <script src="https://unicons.iconscout.com/release/v4.0.0/script/monochrome/bundle.js"></script>
 
         <!-- Switcher Js -->
-        <script src="{% static 'js/pages/switcher.init.js' %}"></script>
+        <script src="{% static 'js/cloud/switcher.init.js' %}"></script>
 
         <!-- Counter Js -->
-        <script src="{% static 'js/pages/counter.init.js' %}"></script>
-        
+        <script src="{% static 'js/cloud/counter.init.js' %}"></script>
+
         <script src="{% static 'js/app.js' %}"></script>
 {% endblock javascript %}
