--- a/templates/kinsdb/database-index.html
+++ b/templates/kinsdb/database-index.html
@@ -60,7 +60,7 @@
               </a>
               <p class="text-muted mb-4">(주)비알엔씨</p>
 
-              <a href="{% url 'database' company='BRNC' %}" class="btn btn-primary">27 개의 문서</a>
+              <a href="{% url 'institution' %}" class="btn btn-primary">국가별 문서</a>
             </div>
           </div>
         </div>
@@ -76,7 +76,7 @@
               </a>
               <p class="text-muted mb-4">울산과학기술원</p>
 
-              <a href="{% url 'database' company='UNIST' %}" class="btn btn-primary">07 개의 문서</a>
+              <a href="{% url 'database' company='UNIST' institution='미국' %}" class="btn btn-primary">부지인자별 문서</a>
             </div>
           </div>
         </div>
