--- a/templates/kinsdb/BRNC_database.html
+++ b/templates/kinsdb/BRNC_database.html
@@ -93,7 +93,7 @@
                 <div>
                   <button type="submit" href="javascript:void(0)" class="btn btn-primary"><i class="uil uil-filter"></i> Filter</button>
 
-                  <a href="{% url 'database' company='BRNC' %}" style="padding-left:10px;">Clear<i class="uil uil-multiply""></i></a>
+                  <a href="{% url 'database' company='BRNC' institution='미국' %}" style="padding-left:10px;">Clear<i class="uil uil-multiply""></i></a>
                 </div>
               </div>
             </div>
