--- a/templates/kinsdb/UNIST_database.html
+++ b/templates/kinsdb/UNIST_database.html
@@ -41,6 +41,62 @@
   <div class="container">
 
     <div class="row justify-content-center">
+      <div class="col-lg-9">
+
+        <div class="job-list-header">
+          <form action="#">
+            <div class="row g-2">
+              <div class="col-lg-3 col-md-6">
+                <div class="filler-job-form">
+                  <i class="uil uil-briefcase-alt"></i>
+                  <input type="search" class="form-control filter-job-input-box" id="exampleFormControlInput1" placeholder="Job, company... ">
+                </div>
+              </div>
+              <!--end col-->
+              <div class="col-lg-3 col-md-6">
+                <div class="filler-job-form">
+                  <i class="uil uil-location-point"></i>
+                  <select class="form-select" data-trigger name="choices-single-location" id="choices-single-location" aria-label="Default select example">
+
+                    <option value="VU">Vanuatu</option>
+                    <option value="VE">Venezuela, Bolivarian Republic of</option>
+                    <option value="VN">Viet Nam</option>
+                    <option value="VG">Virgin Islands, British</option>
+                    <option value="VI">Virgin Islands, U.S.</option>
+                    <option value="WF">Wallis and Futuna</option>
+                    <option value="EH">Western Sahara</option>
+                    <option value="YE">Yemen</option>
+                    <option value="ZM">Zambia</option>
+                    <option value="ZW">Zimbabwe</option>
+                  </select>
+                </div>
+              </div>
+              <!--end col-->
+              <div class="col-lg-3 col-md-6">
+                <div class="filler-job-form">
+                  <i class="uil uil-clipboard-notes"></i>
+                  <select class="form-select " data-trigger name="choices-single-categories" id="choices-single-categories" aria-label="Default select example">
+                    <option value="4">Accounting</option>
+                    <option value="1">IT & Software</option>
+                    <option value="3">Marketing</option>
+                    <option value="5">Banking</option>
+                  </select>
+                </div>
+              </div>
+              <!--end col-->
+              <div class="col-lg-3 col-md-6">
+                <a href="javascript:void(0)" class="btn btn-primary w-100"><i class="uil uil-filter"></i> Fliter</a>
+              </div>
+              <!--end col-->
+            </div>
+            <!--end row-->
+          </form>
+        </div>
+        <!--end job-list-header-->
+      </div>
+    </div>
+    <!--end row-->
+    <div class="row justify-content-center">
       <div class="col-lg-12">
         <div class="candidate-list-widgets mb-4">
           <form method="get" name="search_filter" id="search_filter">
@@ -371,4 +427,6 @@
 <script src="{% static 'js/cloud/switcher.init.js' %}"></script>
 
 <script src="{% static 'js/app.js' %}"></script>
+
+
 {% endblock javascript %}
