--- a/templates/partials/data_card.html
+++ b/templates/partials/data_card.html
@@ -31,7 +31,7 @@
         <div class="mt-2 mt-lg-0">
 
           {% for t in doc.tags.all %}
-          <span class="badge {% if tag in t.tag_content %}bg-soft-primary{% else %}bg-soft-muted{% endif %} fs-14 mt-1"><a onclick="searchTag('{{ t.tag_content }}')">#{{ t.tag_content }}</a></span>
+          <span class="badge {% if tag == t.tag_content %}bg-soft-primary{% else %}bg-soft-muted{% endif %} fs-14 mt-1"><a onclick="searchTag('{{ t.tag_content }}')">#{{ t.tag_content }}</a></span>
           {% endfor %}
         </div>
       </div>
