site filter search

--- a/templates/kinsdb/BRNC_database.html
+++ b/templates/kinsdb/BRNC_database.html
@@ -160,8 +160,7 @@
 
                       {% for doc in page_obj %}
                       <!-- start card -->
-                      {% include 'partials/data_card.html' %}
-
+                      {% include 'partials/brnc_card.html' %}
                       <!--end card-->
                       {% endfor %}
 
